# demo-law-train

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
app/: benchmark.py  compare_models.py  comparison.py  download.py  inference.py  server.py  train.py
app/models/law-qa-qwen-lora/: README.md  adapter_config.json  dataset-metadata.json  generation_config.json
docs/: ai_native_guidelines.md  architecture.md  development.md
web/: app.js  index.html  package.json  style.css
web/src/: main.tsx
